tests/ui/asm/aarch64/duplicate-options.stderr
error: the `nomem` option was already provided
  --> $DIR/duplicate-options.rs:15:33
   |
LL |         asm!("", options(nomem, nomem));
   |                                 ^^^^^ this option was already provided

error: the `preserves_flags` option was already provided
  --> $DIR/duplicate-options.rs:17:43
   |
LL |         asm!("", options(preserves_flags, preserves_flags));
   |                                           ^^^^^^^^^^^^^^^ this option was already provided

error: the `nostack` option was already provided
  --> $DIR/duplicate-options.rs:19:61
   |
LL |         asm!("", options(nostack, preserves_flags), options(nostack));
   |                                                             ^^^^^^^ this option was already provided

error: the `nostack` option was already provided
  --> $DIR/duplicate-options.rs:21:35
   |
LL |         asm!("", options(nostack, nostack), options(nostack), options(nostack));
   |                                   ^^^^^^^ this option was already provided

error: the `nostack` option was already provided
  --> $DIR/duplicate-options.rs:21:53
   |
LL |         asm!("", options(nostack, nostack), options(nostack), options(nostack));
   |                                                     ^^^^^^^ this option was already provided

error: the `nostack` option was already provided
  --> $DIR/duplicate-options.rs:21:71
   |
LL |         asm!("", options(nostack, nostack), options(nostack), options(nostack));
   |                                                                       ^^^^^^^ this option was already provided

error: the `noreturn` option was already provided
  --> $DIR/duplicate-options.rs:28:38
   |
LL |             options(preserves_flags, noreturn),
   |                                      ^^^^^^^^ this option was already provided

error: the `nomem` option was already provided
  --> $DIR/duplicate-options.rs:29:21
   |
LL |             options(nomem, nostack),
   |                     ^^^^^ this option was already provided

error: the `noreturn` option was already provided
  --> $DIR/duplicate-options.rs:30:21
   |
LL |             options(noreturn),
   |                     ^^^^^^^^ this option was already provided

error: aborting due to 9 previous errors

